--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  margin-left: 50px;
+  margin-right: 50px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  border : 2px solid rgb(12, 7, 7);
+  margin : 10px 0px;
+}
+
+.card h4 {
+  text-align: center;
+}
+
